--- a/config/database.yml
+++ b/config/database.yml
@@ -80,4 +80,6 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
+  <<: *default
+  adapter: postgresql
   url: <%= ENV['DATABASE_URL'] %>
